src/components/pages/GallerySimple.css
.gallery-container {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap: 10px;
    padding: 10px;
    max-height: 80vh;
    overflow-y: auto;
}

.gallery-item {
    width: 100%;
    aspect-ratio: 1/1;
    overflow: hidden;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.gallery-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: transform 0.3s ease;
}

.gallery-image:hover {
    transform: scale(1.05);
}


.gallery-container::-webkit-scrollbar {
    width: 8px;
}

.gallery-container::-webkit-scrollbar-thumb {
    background: #888;
    border-radius: 4px;
}

.gallery-container::-webkit-scrollbar-thumb:hover {
    background: #555;
}

.modal-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: rgba(0, 0, 0, 0.8);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
}

.modal-content {
    max-width: 90%;
    max-height: 90%;
}

.modal-image {
    max-width: 100%;
    max-height: 100%;
    border-radius: 10px;
}

@media (min-width: 600px) {
    .gallery-container {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (min-width: 900px) {
    .gallery-container {
        grid-template-columns: repeat(3, 1fr);
    }
}

